gke/postinstall/docker-registry/service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  ports:
    - name: http
      targetPort: 5000
      port: 80
  selector:
    app: registry
