gke/postinstall/docker-registry/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx/client_max_body_size: 100m
    ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-body-size: 50m

spec:
  tls:
    - hosts:
        - docker-registry.lab.sspcloud.fr
  rules:
    - host: docker-registry.lab.sspcloud.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: registry
              servicePort: http
